add home path
