# swagger-static/swagger-spec.yaml
@@ -1,5 +1,14 @@
 openapi: 3.0.0
 paths:
+  /:
+    get:
+      operationId: AppController_mainInfo
+      parameters: []
+      responses:
+        '200':
+          description: ''
+      tags:
+        - app
   /api/v1/projects:
     post:
       operationId: ProjectsController_createOne
